2004-11-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmenutoolbutton.xml Add.

	* pygtk-gtkwidget.xml (menu_get_for_attach_widget): Add description.

	* pygtk-gtkmenu.xml ("tearoff-state") Add description.

	* pygtk-gtklabel.xml (Description): Update.
	(set_ellipsize, get_ellipsize, set_width_chars, get_width_chars)
	(get_single_line_mode, set_single_line_mode): Add descriptions.
	("ellipsize, "width-chars", "single-line-mode"): Add descriptions.

	* pygtk-pango-constant.xml Add Ellipsize Mode Constants.

	* pygtk-gtkimage.xml (gtk.image_new_from_icon_name)
	(get_icon_name, set_from_icon_name, set_pixel_size, get_pixel_size): 
	Add descriptions of these PyGTK 2.6 methods and function.
	(Description): Update.

2004-11-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkiconview.xml Add.
	* pygtk-gtk-classes.xml Add pygtk-pygtk-gtkiconview.xml

	* pygtk-gtkicontheme.xml (get_icon_sizes): Add description.

	* pygtk-gtkfilechooser.xml (set_show_hidden, get_show_hidden):
	Add description os these PyGTK 2.6 methods.
	(Description) Update.

	* pygtk-gtkfilechooserbutton.xml Add.

	* pygtk-gtk-classes.xml Add pygtk-gtkfilechooserbutton.xml

2004-11-12  John Finlay  <finlay@moeraki.com>

	* pygtk-gobject-functions.xml (signal_list_ids, signal_lookup)
	(signal_name, signal_query): Add descriptions of these PyGTK 2.6
	methods.

	* pygtk-gtkwidget.xml (set_accelerator): Change wording to clarify
	argument value usage. (stan@saticed.me.uk)

2004-11-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkentrycompletion.xml (get_text_column)
	(set_inline_completion, get_inline_completion)
	(set_popup_completion, get_popup_completion): Add descriptions of
	these PyGTK 2.6 methods.

	* pygtk-gtkwidget.xml (drag_dest_add_image_targets)
	(drag_dest_add_text_targets, drag_dest_add_uri_targets)
	(drag_source_add_text_targets, drag_source_get_target_list)
	(drag_source_set_target_list): Add descriptions of these PyGTK 2.6
	methods.
