@@ -1,5 +1,8 @@
 2004-11-14  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkmessagedialog.xml (format_secondary_text)
+	(format_secondary_markup): Add descriptions.
+
 	* pygtk-gtkmenutoolbutton.xml Add.
 
 	* pygtk-gtkwidget.xml (menu_get_for_attach_widget): Add description.
